add_executable(eventloop_test EventLoop_test.cpp)
target_link_libraries(eventloop_test chtho_net)

add_executable(channel_test Channel_test.cpp)
target_link_libraries(channel_test chtho_net)

add_executable(eventloopthread_test EventLoopThread_test.cpp)
target_link_libraries(eventloopthread_test chtho_net)

add_executable(eventloopthreadpool_test EventLoopThreadPool_test.cpp)
target_link_libraries(eventloopthreadpool_test chtho_net)