add_executable(eventloop_test EventLoop_test.cpp)
target_link_libraries(eventloop_test chtho_net)

add_executable(channel_test Channel_test.cpp)
target_link_libraries(channel_test chtho_net)

add_executable(eventloopthread_test EventLoopThread_test.cpp)
target_link_libraries(eventloopthread_test chtho_net)

add_executable(eventloopthreadpool_test EventLoopThreadPool_test.cpp)
target_link_libraries(eventloopthreadpool_test chtho_net)

add_executable(inetaddr_test InetAddr_test.cpp)
target_link_libraries(inetaddr_test chtho_net)

add_executable(buffer_test Buffer_test.cpp)
target_link_libraries(buffer_test chtho_net)

add_executable(echoserver_test EchoServer_test.cpp)
target_link_libraries(echoserver_test chtho_net)